--- a/src/adoc/the-delusion-of-learning-from-experience.adoc
+++ b/src/adoc/the-delusion-of-learning-from-experience.adoc
@@ -1,5 +1,6 @@
 = The delusion of learning from experience
-Page 23
+
+From <<the-fifth-discipline#the-fifth-discipline, The Fifth Discipline, page 23>>
 
 We can learn from our experiences, but we are limited. When the consequences of our actions are only obvious long after our actions, it is harder to correlate the two, which impairs learning. A challenge we face is that many of our most important decisions are far removed from their consequences, preventing us from learning from our successes or our mistakes.
 
