--- a/src/adoc/the-fixation-on-events.adoc
+++ b/src/adoc/the-fixation-on-events.adoc
@@ -1,5 +1,6 @@
 = The fixation on events
-Page 21
+
+From <<the-fifth-discipline#the-fifth-discipline, The Fifth Discipline, page 21>>
 
 We wrongly seek to explain our reality as a series of cause-and-effect events, and we focus on the short-term. As a consequence, we fail to identify larger patterns that goven these events which could otherwise grant us generative power.
 
