--- a/src/adoc/the-myth-of-the-management-team.adoc
+++ b/src/adoc/the-myth-of-the-management-team.adoc
@@ -1,5 +1,6 @@
 = The myth of the management team
-Page 25
+
+From <<the-fifth-discipline#the-fifth-discipline, The Fifth Discipline, page 25>>
 
 A management team composed of representatives from each of an organization's core functions is meant to resolve cross-functional issues. When those issues are routine, the team may even succeed. But all too often, the team crumbles under pressure because they lack the skills necessary to communicate effectively and build shared understandings. Though they create an image of unity, each member holds reservations that they are not comfortable sharing with the group. When they state their opinions, they tend to assign blame and polarize the group further. When the group manages to reach a consensus, it does so only by relenting to the demands of an individual or by adopting a compromise that is insubstantial.
 
